--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>Can You Guess The Movie?</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">2 hours ago</div>
+                        <div class="date">3 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -169,7 +169,7 @@
                     <div class="video-info">
                         <h3>Arthur Visits Bradford😂</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">4 hours ago</div>
+                        <div class="date">5 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -180,7 +180,7 @@
                     <div class="video-info">
                         <h3>The Way of Life | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">5 hours ago</div>
+                        <div class="date">6 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -191,7 +191,7 @@
                     <div class="video-info">
                         <h3>Get My Trading Strategies & Code: Exclusive Access! #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">8 hours ago</div>
+                        <div class="date">9 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -224,7 +224,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Inspiration - Being It vs Finding It</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">11 hours ago</div>
+                        <div class="date">12 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -235,7 +235,7 @@
                     <div class="video-info">
                         <h3>Try not to Laugh: MEN</h3>
                         <div class="channel">ItalianBach</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -444,7 +444,7 @@
                     <div class="video-info">
                         <h3>Winter Chill Can't Keep the Mystic Away! #Sadhguru #EcstasyOfEnlightenment</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">2 days ago</div>
+                        <div class="date">3 days ago</div>
                     </div>
                 </a>
             </div>
@@ -455,7 +455,7 @@
                     <div class="video-info">
                         <h3>Best Pizza Concept⎮Now You Can Partnership With Me</h3>
                         <div class="channel">Vito Iacopelli</div>
-                        <div class="date">2 days ago</div>
+                        <div class="date">3 days ago</div>
                     </div>
                 </a>
             </div>
@@ -622,7 +622,7 @@
                     <div class="video-info">
                         <h3>Try not to Laugh: Renaissance Fair Cringe</h3>
                         <div class="channel">ItalianBach</div>
-                        <div class="date">3 days ago</div>
+                        <div class="date">4 days ago</div>
                     </div>
                 </a>
             </div>
@@ -5778,7 +5778,7 @@
                         <div class="video-info">
                             <h3>Get My Trading Strategies & Code: Exclusive Access! #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">8 hours ago</div>
+                            <div class="date">9 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7898,7 +7898,7 @@
                         <div class="video-info">
                             <h3>The Way of Life | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">5 hours ago</div>
+                            <div class="date">6 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7920,7 +7920,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Inspiration - Being It vs Finding It</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">11 hours ago</div>
+                            <div class="date">12 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8041,7 +8041,7 @@
                         <div class="video-info">
                             <h3>Winter Chill Can't Keep the Mystic Away! #Sadhguru #EcstasyOfEnlightenment</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">2 days ago</div>
+                            <div class="date">3 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -9417,7 +9417,7 @@
                         <div class="video-info">
                             <h3>Best Pizza Concept⎮Now You Can Partnership With Me</h3>
                             <div class="channel">Vito Iacopelli</div>
-                            <div class="date">2 days ago</div>
+                            <div class="date">3 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -10232,7 +10232,7 @@
                         <div class="video-info">
                             <h3>Can You Guess The Movie?</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">2 hours ago</div>
+                            <div class="date">3 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10243,7 +10243,7 @@
                         <div class="video-info">
                             <h3>Arthur Visits Bradford😂</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">4 hours ago</div>
+                            <div class="date">5 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10254,7 +10254,7 @@
                         <div class="video-info">
                             <h3>Try not to Laugh: MEN</h3>
                             <div class="channel">ItalianBach</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -10342,7 +10342,7 @@
                         <div class="video-info">
                             <h3>Try not to Laugh: Renaissance Fair Cringe</h3>
                             <div class="channel">ItalianBach</div>
-                            <div class="date">3 days ago</div>
+                            <div class="date">4 days ago</div>
                         </div>
                     </a>
                 </div>
